--- a/compose.yml
+++ b/compose.yml
@@ -1,14 +1,6 @@
 services:
   narou:
-    build:
-      context: .
-      dockerfile: dockerfile
-      args:
-        NAROU_VERSION: 3.9.0
-        AOZORAEPUB3_VERSION: 1.1.1b24Q
-        UID: 1000
-        GID: 1000
-    image: kokotaro/narou:3.9.0
+    image: haoling/narou:3.9.0
     command: ["narou", "web", "-np", "33000"]
     volumes:
       - .:/home/narou/novel:cached
