--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -22,4 +22,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --tag haoling/narou:${NAROU_VERSION} --build-arg NAROU_VERSION=${NAROU_VERSION}
+      run: docker build . --tag haoling/narou:${{ inputs.NAROU_VERSION }} --build-arg NAROU_VERSION=${{ inputs.NAROU_VERSION }}
