--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -21,5 +21,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --tag haoling/narou:${{ inputs.NAROU_VERSION }} --build-arg NAROU_VERSION=${{ inputs.NAROU_VERSION }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: haoling/narou:${{ inputs.NAROU_VERSION }}
+        build-args:
+        - NAROU_VERSION=${{ inputs.NAROU_VERSION }}
+        - AOZORAEPUB3_VERSION=${{ inputs.AOZORAEPUB3_VERSION }}
