--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -34,5 +34,5 @@ jobs:
         push: true
         tags: haoling/narou:${{ inputs.NAROU_VERSION }}
         build-args:
-        - NAROU_VERSION=${{ inputs.NAROU_VERSION }}
-        - AOZORAEPUB3_VERSION=${{ inputs.AOZORAEPUB3_VERSION }}
+          NAROU_VERSION: ${{ inputs.NAROU_VERSION }}
+          AOZORAEPUB3_VERSION: ${{ inputs.AOZORAEPUB3_VERSION }}
