--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
         AOZORAEPUB3_VERSION: 1.1.1b30Q
         UID: 1000
         GID: 1000
-    image: kokotaro/narou:3.9.1
+    image: kokotaro/narou:3.9.1-PR446-447
     command: ["narou", "web", "-np", "33000"]
     volumes:
       - type: bind
